force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/BMCServiceDesk__SelfService_Theme__c.object-meta.xml
<CustomObject>
    <description>This object holds the themes used in branding of Self Service</description>
    <label>SelfService Theme</label>
    <nameField>
        <displayFormat>The-{0}</displayFormat>
        <label>Theme Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SelfService Themes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>