force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__Active__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>