force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__Company_URL__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Company_URL__c</fullName>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>