force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__Resource_File_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Resource_File_Name__c</fullName>
    <label>Resource File Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>