force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__SelfServiceVersion__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SelfServiceVersion__c</fullName>
    <description>This field will be used to store Self Service Version of the theme.</description>
    <label>Self Service Version</label>
    <length>20</length>
    <type>Text</type>
</CustomField>