force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__Sequence__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Sequence__c</fullName>
    <externalId>true</externalId>
    <label>Sequence Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>