force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__Theme_Data__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Theme_Data__c</fullName>
    <description>This field will be used to store color coding information for different SS components.</description>
    <label>Theme Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>