force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__Theme_Description__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Theme_Description__c</fullName>
    <label>Theme Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>