force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__URL_Tip_Text__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__URL_Tip_Text__c</fullName>
    <label>URL Tip Text</label>
    <length>200</length>
    <type>Text</type>
</CustomField>