force-app/main/default/objects/BMCServiceDesk__SelfService_Theme__c/fields/BMCServiceDesk__Use_Default_Images__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Use_Default_Images__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Default Images</label>
    <type>Checkbox</type>
</CustomField>